# Projet_IP

./: CMakeLists.txt  FindGUROBI.cmake  benchmark.cpp  colGenSolver.cpp  compactSolver.cpp  divingHeuristicSolver.cpp  example.cpp  graphConstructor.py  sample.inst  sample.sol  uniform_6.sol
include/: ColGenModel.hpp  Column.hpp  CompactModel.hpp  DivingHeuristic.hpp  Heuristics.hpp  Instance.hpp  Point2D.hpp  Solution.hpp
instances/: uniform_10.inst  uniform_12.inst  uniform_13.inst  uniform_14.inst  uniform_15.inst  uniform_16.inst  uniform_17.inst  uniform_18.inst  uniform_19.inst  uniform_2.inst  uniform_20.inst  uniform_21.inst  uniform_22.inst  uniform_23.inst  uniform_24.inst  uniform_25.inst  uniform_26.inst  uniform_27.inst  uniform_28.inst  uniform_29.inst  uniform_3.inst  uniform_30.inst  uniform_31.inst  uniform_32.inst  uniform_33.inst  uniform_34.inst  uniform_35.inst  uniform_36.inst  uniform_37.inst  uniform_38.inst  uniform_39.inst  uniform_4.inst  uniform_40.inst  uniform_41.inst  uniform_42.inst  uniform_43.inst  uniform_44.inst  uniform_45.inst  uniform_46.inst  uniform_47.inst  (+7 more)
results/: column_strategy.csv  column_strategy_test1.csv  compact_model.csv  compact_model_res.csv  compact_model_res_save2.csv  diving_heuristic.csv  pricing_method.csv  pricing_method_save1.csv  single_vs_multi.csv  with_without_stabilization.csv  with_without_stabilization_wrong.csv  without_vs_with_inout.csv
solutions/sol/: uniform_10.sol  uniform_12.sol  uniform_13.sol  uniform_14.sol  uniform_15.sol  uniform_16.sol  uniform_17.sol  uniform_18.sol  uniform_19.sol  uniform_2.sol  uniform_20.sol  uniform_21.sol  uniform_22.sol  uniform_23.sol  uniform_24.sol  uniform_25.sol  uniform_28.sol  uniform_29.sol  uniform_3.sol  uniform_30.sol  uniform_32.sol  uniform_33.sol  uniform_34.sol  uniform_35.sol  uniform_36.sol  uniform_37.sol  uniform_38.sol  uniform_39.sol  uniform_4.sol  uniform_41.sol  uniform_42.sol  uniform_43.sol  uniform_44.sol  uniform_45.sol  uniform_46.sol  uniform_47.sol  uniform_48.sol  uniform_49.sol  uniform_5.sol  uniform_50.sol  (+3 more)
src/: ColGenModel.cpp  Column.cpp  CompactModel.cpp  DivingHeuristic.cpp  Heuristics.cpp  Instance.cpp  Solution.cpp
